updated to include interests section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#game-project">Game Project</a></li>
+                <li><a href="#interests">Interests</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -30,7 +30,7 @@
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                <li><a href="#game-project" onclick="toggleMenu()">Game Project</a></li>
+                <li><a href="#interests" onclick="toggleMenu()">Interests</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>  
             </div>
         </div>
@@ -175,6 +175,15 @@
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#game-project'">
+    </section>
+    <section id = "interests">
+        <p class="section__text__p1">These are some of my</p>
+        <h1 class="title">Interests</h1>
+        <div class="details-container color-container">
+            <div class="article-container">
+                <img src="./assets/" alt="">
+            </div>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
