--- a/index.html
+++ b/index.html
@@ -174,17 +174,75 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#game-project'">
+        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#interests'">
     </section>
     <section id = "interests">
         <p class="section__text__p1">These are some of my</p>
         <h1 class="title">Interests</h1>
-        <div class="details-container color-container">
-            <div class="article-container">
-                <img src="./assets/" alt="">
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/gaming-icon.png" alt="gaming icon" class="interests-img"/>
+                    </div>
+                    <h2 class="experience-sub-title interests-title">Gaming</h2>
+                    <p> I've always been into Gaming from a young age whether that be the Sega Megadrive or a Gaming PC. <br /><br /> I have always enjoyed Dead by Daylight and 
+                        Overwatch and so decided to create a TikTok to post Dead By Daylight edited skits just to make people laugh and saw a decent level of success
+                        with multiple videos garnering more than 100,000 views. <br /><br />
+                    </p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 interests-btn" onclick="location.href='https://www.tiktok.com/@anonymous.ripper'">
+                            TikTok
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/cricket-icon.png" alt="cricket icon" class="interests-img"/>
+                    </div>
+                    <h2 class="experience-sub-title interests-title">Cricket</h2>
+                    <p> I've spent many hours with my brothers watching and playing Cricket and after Englands recent World Cup debacle it's somewhat 
+                        depressing to even talk about Cricket. <br /><br />Swiftly moving on I enjoy it very much, and would happily sit down to watch a 5 day test match.
+                        Yes a cricket match can go on for 5 days and yes, i do have friends believe it or not. 
+                        <br /><br />I even uploaded gameplay of Cricket just for others to gauge an understanding of how the games play. <br /><br />
+                    </p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 interests-btn" onclick="location.href='https://youtu.be/8UEClqVvuyE'">
+                            YouTube
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#contact'">
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon" />
+                <p><a href="mailto:ashalramzan@yahoo.co.uk">ashalramzan@yahoo.co.uk</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon" />
+                <p><a href="https://www.linkedin.com/in/ashal-ramzan">LinkedIn</a></p>
             </div>
         </div>
     </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#interests">Interests</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2023 Ashal Ramzan, All Rights Reserved</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
