--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
     </section>
     <footer>
-        <nav>
+        <nav class="hidden">
             <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
@@ -244,6 +244,5 @@
         </nav>
         <p>Copyright &#169; 2023 Ashal Ramzan, All Rights Reserved</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
