--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src = "script.js"></script>
 </head>
 <body>
-    <nav id = "desktop-nav" class="hidden">
+    <nav id = "desktop-nav">
         <div class = "logo">Ashal Ramzan</div>
         <div>
             <ul class="nav-links">
