--- a/index.html
+++ b/index.html
@@ -98,63 +98,63 @@
                     <h2 class="experience-sub-title">Skills</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>C#</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>AWS</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>Python</h3>
                                 <p>Basic</p>
                             </div>
                         </article>                        
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>HTML</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>CSS</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>JavaScript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>SQL</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>                        
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>Git</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
                             <div>
                                 <h3>Selenium | NUnit</h3>
                                 <p>Basic</p>
