--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             <img src="./assets/profile-pic.png" alt="ashal profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Ashal Ramzan</h1>
-            <p class="section__text__p2">Software Developer</p>
+            <h1 class="title">Software Developer <span class="wave">👋</span></h1>
+            <p class="section__text__p1">Hello, I'm Ashal Ramzan. <br /><br /> 
+                A passionate Software Developer based
+                in Greater Manchester. <br /><br /></p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/AshalRamzanCV.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
