--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 A passionate Software Developer based
                 in Greater Manchester. <br /><br /></p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/AshalRamzanCV.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/AshalRamzanCV.docx')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
@@ -61,8 +61,8 @@
         <p class = "section__text__p1">Get To Know More</p>
         <h1 class = "title">About Myself</h1>
         <div class="section-container">
-            <div class = "section_pic-container">
-                <img src = "./assets/programming-icon.png" alt="picture of a laptop coding" class = "about-pic"/>
+            <div class = "section_pic-container1">
+                <img src = "./assets/programmer.gif" alt="picture of a laptop coding" class = "about-pic"/>
             </div>
             <div class = "about-details-container">
                 <div class="about-containers">
