updated colour scheme and animations

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 A passionate Software Developer based
                 in Greater Manchester. <br /><br /></p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/AshalRamzanCV.docx')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+                <button class="btn" style="--clr:#1e9bff" onclick="window.open('./assets/AshalRamzanCV.docx')">Download CV</button>
+                <button class="btn" style="--clr:#1e9bff" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My LinkedIn" class="icon" 
@@ -62,19 +62,19 @@
         <h1 class = "title">About Myself</h1>
         <div class="section-container">
             <div class = "section_pic-container1">
-                <img src = "./assets/programmer.gif" alt="picture of a laptop coding" class = "about-pic"/>
+                <img src = "./assets/programmer.gif" alt="picture of a programmer" class = "about-pic"/>
             </div>
             <div class = "about-details-container">
                 <div class="about-containers">
                     <div class = "details-container">
                         <img src="./assets/experience.png" alt="first role icon" class="icon"/>
                         <h3>Looking for my first role</h3>
-                        <p>To showcase my skills and passion for Software</p>
+                        <p class="textbox">To showcase my skills and passion for Software</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="education icon" class="icon"/>
                         <h3>Education</h3>
-                        <p>Foundation Degree in Software Development <br /> Manchester Metropolitan University <br /> Grade 2.1</p>
+                        <p class="textbox">Foundation Degree in Software Development <br /> Manchester Metropolitan University <br /> Grade 2.1</p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -99,73 +99,73 @@
                     <h2 class="experience-sub-title">Skills</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>C#</h3>
-                                <p>Intermediate</p>
+                                <p class="textbox">Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>AWS</h3>
-                                <p>Intermediate</p>
+                                <p class="textbox">Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>Python</h3>
-                                <p>Basic</p>
+                                <p class="textbox">Basic</p>
                             </div>
                         </article>                        
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>HTML</h3>
-                                <p>Intermediate</p>
+                                <p class="textbox">Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>CSS</h3>
-                                <p>Intermediate</p>
+                                <p class="textbox">Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p class="textbox">Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>SQL</h3>
-                                <p>Intermediate</p>
+                                <p class="textbox">Intermediate</p>
                             </div>
                         </article>                        
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>Git</h3>
-                                <p>Basic</p>
+                                <p class="textbox">Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon"/>
+                            <img src="./assets/checkmark_icon.png" alt="checkmark icon" class="icon1"/>
                             <div>
                                 <h3>Selenium | NUnit</h3>
-                                <p>Basic</p>
+                                <p class="textbox">Basic</p>
                             </div>
                         </article>
                     </div>
                 </div>
                 <div class="details-container">
                     <h2 class="experience-sub-title">Capita Graduate Programme</h2>
-                    <p>Underwent a 3 month graduate programme with Capita which was designed to help further develop my skillset allowing me to start
+                    <p class="textbox">Underwent a 3 month graduate programme with Capita which was designed to help further develop my skillset allowing me to start
                         my career in software with a strong foundation. <br /><br /> With a focus on AWS and .NET we undertook different problems and
                         challenged ourselves to think creatively and apply our knowledge more effectively. I completed the training with an average
                         mark of 96%. <br/><br/>The programme included: <br/><br/>
@@ -188,7 +188,7 @@
                         <img src="./assets/gaming-icon.png" alt="gaming icon" class="interests-img"/>
                     </div>
                     <h2 class="experience-sub-title interests-title">Gaming</h2>
-                    <p> I've always been into Gaming from a young age whether that be the Sega Megadrive or a Gaming PC. <br /><br /> I have always enjoyed Dead by Daylight and 
+                    <p class="textbox"> I've always been into Gaming from a young age whether that be the Sega Megadrive or a Gaming PC. <br /><br /> I have always enjoyed Dead by Daylight and 
                         Overwatch and so decided to create a TikTok to post Dead By Daylight edited skits just to make people laugh and saw a decent level of success
                         with multiple videos garnering more than 100,000 views. <br /><br />
                     </p>
@@ -203,7 +203,7 @@
                         <img src="./assets/cricket-icon.png" alt="cricket icon" class="interests-img"/>
                     </div>
                     <h2 class="experience-sub-title interests-title">Cricket</h2>
-                    <p> I've spent many hours with my brothers watching and playing Cricket and after Englands recent World Cup debacle it's somewhat 
+                    <p class="textbox"> I've spent many hours with my brothers watching and playing Cricket and after Englands recent World Cup debacle it's somewhat 
                         depressing to even talk about Cricket. <br /><br />Swiftly moving on I enjoy it very much, and would happily sit down to watch a 5 day test match.
                         Yes a cricket match can go on for 5 days and yes, i do have friends believe it or not. 
                         <br /><br />I even uploaded gameplay of Cricket just for others to gauge an understanding of how the games play. <br /><br />
