--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="./assets/profile-pic.png" alt="ashal profile picture">
         </div>
         <div class="section__text">
-            <h1 class="title">Software Developer <span class="wave">👋</span></h1>
+            <h1 class="title" id="SD">Software Developer <span class="wave">👋</span></h1>
             <p class="section__text__p1">Hello, I'm Ashal Ramzan. <br /><br /> 
                 A passionate Software Developer based
                 in Greater Manchester. <br /><br /></p>
