--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             <div class = "about-details-container">
                 <div class="about-containers">
                     <div class = "details-container">
-                        <img src="./assets/experience.png" alt="first role icon" class="icon"/>
+                        <img src="./assets/experience.png" alt="first role icon" class="icon1"/>
                         <h3>Looking for my first role</h3>
                         <p class="textbox">To showcase my skills and passion for Software</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png" alt="education icon" class="icon"/>
+                        <img src="./assets/education.png" alt="education icon" class="icon1"/>
                         <h3>Education</h3>
                         <p class="textbox">Foundation Degree in Software Development <br /> Manchester Metropolitan University <br /> Grade 2.1</p>
                     </div>
