--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id = "profile" class="hidden">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic.png" alt="ashal profile picture">
+            <img src="./assets/profile2.jpg" alt="ashal profile picture" class="profile-img">
         </div>
         <div class="section__text">
             <h1 class="title" id="SD">Software Developer <span class="wave">👋</span></h1>
