updated text in about me section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>AWS & .NET</span><br>Managing and deploying applications and writing programs in C#</li>
+                            <li><span>AWS & .NET</span><br>Actively manage and deploy AWS applications, and also build programs in the .NET framework.</li>
                             <li><span>Full Stack Development</span><br>Using HTML, CSS, JS/ReactJS, SQL and PHP</li>
                         </ul>
                     </div>
