fixed arrow placement, and interests buttons

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         with multiple videos garnering more than 100,000 views. <br /><br />
                     </p>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 interests-btn" onclick="location.href='https://www.tiktok.com/@anonymous.ripper'">
+                        <button class="btn interests-btn" style="--clr:#1e9bff" onclick="location.href='https://www.tiktok.com/@anonymous.ripper'">
                             TikTok
                         </button>
                     </div>
@@ -138,7 +138,7 @@
                         <br /><br />I even uploaded gameplay of Cricket just for others to gauge an understanding of how the games play. <br /><br />
                     </p>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 interests-btn" onclick="location.href='https://youtu.be/8UEClqVvuyE'">
+                        <button class="btn interests-btn" style="--clr:#1e9bff" onclick="location.href='https://youtu.be/8UEClqVvuyE'">
                             YouTube
                         </button>
                     </div>
