added projects section w reponsive design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <script defer src = "script.js"></script>
+    <script src="https://kit.fontawesome.com/616aafbeaf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav id = "desktop-nav" class="hidden">
@@ -106,6 +107,34 @@
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#interests'">
+    </section>
+    <section id="projects" class="hidden">
+        <div class="portfolio">
+            <div class="container">
+                <h1 class="about-sub-title">My Projects</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="./assets/project1.jpg"/>
+                        <div class="layer">
+                            <h3 style="color: white;">VideoGame Site</h3>
+                            <p>React Site dedicated to everything videogame and tech. Always
+                                being updated and improved.
+                            </p>
+                            <a href="https://master.d3pu2bivqtw1u3.amplifyapp.com" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./assets/snake-logo.jpg"/>
+                        <div class="layer">
+                            <h3 style="color: white;">Snake Game</h3>
+                            <p>The classic Snake game coded entirely in C#. Currently a work in progress. 
+                            </p>
+                            <!-- <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id = "interests" class="hidden">
         <p class="section__text__p1">These are some of my</p>
