increased padding for projects div

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section id="projects" class="hidden">
         <div class="portfolio">
             <div class="container">
-                <h1 class="about-sub-title">My Projects</h1>
+                <h1 class="about-sub-title" id="project-title">My Projects</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="./assets/project1.jpg"/>
