--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -30,6 +31,7 @@
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#interests" onclick="toggleMenu()">Interests</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>  
             </div>
@@ -137,7 +139,7 @@
         </div>
     </section>
     <section id = "interests" class="hidden">
-        <p class="section__text__p1">These are some of my</p>
+        <!-- <p class="section__text__p1">These are some of my</p>
         <h1 class="title">Interests</h1>
         <div class="experience-details-container">
             <div class="about-containers">
@@ -173,7 +175,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
         <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#contact'">
     </section>
     <section id="contact" class="hidden">
@@ -195,6 +198,7 @@
             <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#interests">Interests</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
