revamped interests section and updated nav

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#interests'">
+        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#projects'">
     </section>
     <section id="projects" class="hidden">
         <div class="portfolio">
@@ -137,46 +137,60 @@
                 </div>
             </div>
         </div>
+        <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#interests'">
     </section>
     <section id = "interests" class="hidden">
-        <!-- <p class="section__text__p1">These are some of my</p>
-        <h1 class="title">Interests</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/gaming-icon.png" alt="gaming icon" class="interests-img"/>
-                    </div>
-                    <h2 class="experience-sub-title interests-title">Gaming</h2>
-                    <p class="textbox"> I've always been into Gaming from a young age whether that be the Sega Megadrive or a Gaming PC. <br /><br /> I have always enjoyed Dead by Daylight and 
-                        Overwatch and so decided to create a TikTok to post Dead By Daylight edited skits just to make people laugh and saw a decent level of success
-                        with multiple videos garnering more than 100,000 views. <br /><br />
-                    </p>
-                    <div class="btn-container">
-                        <button class="btn interests-btn" style="--clr:#1e9bff" onclick="location.href='https://www.tiktok.com/@anonymous.ripper'">
-                            TikTok
-                        </button>
-                    </div>
+        <p class="section__text__p1">These are some of my</p>
+        <h1 class="title" id="interests-title">Interests</h1>
+        <div class="container-interests">
+            <div class="card" style="--clr:#009688;">
+                <div class="imgBx">
+                    <img src="./assets/gaming.jpg" alt="gaming image">
                 </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/cricket-icon.png" alt="cricket icon" class="interests-img"/>
-                    </div>
-                    <h2 class="experience-sub-title interests-title">Cricket</h2>
-                    <p class="textbox"> I've spent many hours with my brothers watching and playing Cricket and after Englands recent World Cup debacle it's somewhat 
-                        depressing to even talk about Cricket. <br /><br />Swiftly moving on I enjoy it very much, and would happily sit down to watch a 5 day test match.
-                        Yes a cricket match can go on for 5 days and yes, i do have friends believe it or not. 
-                        <br /><br />I even uploaded gameplay of Cricket just for others to gauge an understanding of how the games play. <br /><br />
+                <div class="content">
+                    <h2>Gaming</h2>
+                    <p>
+                        I've always been into Gaming from a young age whether that be the Sega Megadrive
+                         or a Gaming PC and have particuarly enjoyed Dead by Daylight and 
+                        Overwatch. <br /><br /> So I decided to create a TikTok to post Dead By 
+                        Daylight edited skits just to make people laugh and saw a decent level of success
+                        with multiple videos garnering more than 100,000 views.
                     </p>
-                    <div class="btn-container">
-                        <button class="btn interests-btn" style="--clr:#1e9bff" onclick="location.href='https://youtu.be/8UEClqVvuyE'">
-                            YouTube
-                        </button>
-                    </div>
+                    <a href="https://www.tiktok.com/@anonymous.ripper" target="_blank">See More</a>
                 </div>
             </div>
-        </div> -->
-
+            <div class="card" style="--clr:#ff3e7f;">
+                <div class="imgBx">
+                    <img src="./assets/cricket-icon.jpg" alt="cricket celebration">
+                </div>
+                <div class="content">
+                    <h2>Cricket</h2>
+                    <p>
+                        I've always been fascinated by Cricket which many find hard to believe. Football 
+                        has taken over. Anyways, aside from my watching and playing time I also play 
+                        cricket videogames. <br /><br /> Yes i'm that obsessed by it. 
+                        I've even uploaded gameplay of Cricket to act as a guide for others debating whether
+                        to buy the game or not.
+                    </p>
+                    <a href="https://youtu.be/8UEClqVvuyE" target="_blank">See More</a>
+                </div>
+            </div>
+            <div class="card" style="--clr:#5DADE2;">
+                <div class="imgBx">
+                    <img src="./assets/cats.JPG" alt="my cats">
+                </div>
+                <div class="content">
+                    <h2>Animal Welfare</h2>
+                    <p>
+                        I had 2 cats for a very long time and absolutely fell in love.
+                        Respecting animals is very important to me and shows someones
+                        character. <br /><br />I try my best to help my local shelters where possible
+                        and always go out of my way to tend to animals in need.
+                    </p>
+                    <a href="https://www.cats.org.uk/adopt-a-cat" target="_blank">See More</a>
+                </div>
+            </div>
+        </div>
         <img src="./assets/arrow.png" alt="arrow to next section" class="icon arrow" onclick="location.href='./#contact'">
     </section>
     <section id="contact" class="hidden">
