updated cards responsiveness

--- a/index.html
+++ b/index.html
@@ -150,11 +150,10 @@
                 <div class="content">
                     <h2>Gaming</h2>
                     <p>
-                        I've always been into Gaming from a young age whether that be the Sega Megadrive
-                         or a Gaming PC and have particuarly enjoyed Dead by Daylight and 
-                        Overwatch. <br /><br /> So I decided to create a TikTok to post Dead By 
-                        Daylight edited skits just to make people laugh and saw a decent level of success
-                        with multiple videos garnering more than 100,000 views.
+                        I've always been into Gaming from a young age starting with the Sega Megadrive
+                        and right now Dead by Daylight and Overwatch. <br /><br /> So I began posting on 
+                        TikTok to post edited gaming skits just to make people laugh and 
+                        saw some success with multiple videos gaining more than 100,000 views.
                     </p>
                     <a href="https://www.tiktok.com/@anonymous.ripper" target="_blank">See More</a>
                 </div>
@@ -167,8 +166,7 @@
                     <h2>Cricket</h2>
                     <p>
                         I've always been fascinated by Cricket which many find hard to believe. Football 
-                        has taken over. Anyways, aside from my watching and playing time I also play 
-                        cricket videogames. <br /><br /> Yes i'm that obsessed by it. 
+                        has taken over. I even play the cricket videogames. <br /><br /> Yes i'm that obsessed by it. 
                         I've even uploaded gameplay of Cricket to act as a guide for others debating whether
                         to buy the game or not.
                     </p>
