added link to snake project

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                         <img src="./assets/snake-logo.jpg"/>
                         <div class="layer">
                             <h3 style="color: white;">Snake Game</h3>
-                            <p>The classic Snake game coded entirely in C#. Currently a work in progress. 
+                            <p>The classic Snake game coded entirely in C#. Still a work in progress. 
                             </p>
-                            <!-- <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                            <a href="https://github.com/ashramzan/SnakeGame" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
